Updated UI. Removed training. Model loads from memory.

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,18 +5,18 @@
   <meta name="viewport" content="width=device-width">
   <meta http-equiv="refresh" content="5; url=/status">
   <title>Sonder</title>
-  <link rel="stylesheet" href="static/css/loading.css">
+  <link rel="stylesheet" href="static/css/home.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 <body>
-<div id="load" align="center">
-  <div>L</div>
-  <div>O</div>
-  <div>A</div>
-  <div>D</div>
-  <div>I</div>
-  <div>N</div>
-  <div>G</div>
-</div>
+  <div id="load" align="center">
+    <div>L</div>
+    <div>O</div>
+    <div>A</div>
+    <div>D</div>
+    <div>I</div>
+    <div>N</div>
+    <div>G</div>
+  </div>
 </body>
 </html>
