--- a/templates/status.html
+++ b/templates/status.html
@@ -27,5 +27,12 @@
       </div>
     </div>
   </div>
+  <div class="wrapper">
+    <div class="container">
+      <div class="label" style="font-size:100%; animation-delay:1s; text-align: center;">
+        <a href="/apk">Download for Android</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
